# ImageFlow

./: .gitignore  ImageFlow.pyproject  README.md  pyproject.toml
imageflow/: __main__.py  application_controller.py  application_model.py
imageflow/ui/: main_window.py
imageflow/ui/design/: main_window.ui
